--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-complete-guide",
+  "name": "today-weather-app",
   "version": "0.1.0",
   "homepage": "https://joeywcl.github.io/todayweather/",
   "private": true,
